feat(triage): three-channel capability gate, review-triage-events v1 vocabulary, one display resolver, per-review event timeline
ReviewTriageChannelGate (renamed) reads ReviewTriageChannelCapability — NAVER/CAFE24/COUPANG only;
outside channels get a 404 door on every triage route. Kinds renamed to the contract's (V44),
AI_ATTENTION_SHOWN is server-resolved, REPLY_* refused where the channel has no reply flow (never
Coupang), locate silver only where a locate surface exists. Page carries the channel's capability row;
UI renders [쿠팡에서 보기] only for LOCATE_RUN and records MARKETPLACE_LOCATED on run completion.

Backend and frontend suites green (review pkg + full).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>